--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "mocha": "^11.0.1"
   },
   "author": "Task Manager Team",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "all": "^0.0.0"
+  }
 }
